src/negative_test_cases/Testcases/incorrect_relational_operand_type.stl
void main(){

boolean a ;
boolean b ;
boolean c = a <  b;


}
